Requested changes #3